Beginning of the loop split by folders

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "DrewGarratt/dev.gulp-email-workflow",
+  "name": "dev.gulp-email-workflow",
   "version": "0.0.3",
   "author": "Drew Linzmaier-Garratt <drew@cunning.as>",
   "licenses": [
