--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "asset-builder": "^1.1.0",
     "browser-sync": "^2.14.0",
     "bs-html-injector": "^3.0.2",
+    "colors": "^1.1.2",
     "del": "^2.2.2",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
@@ -35,23 +36,17 @@
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^3.0.2",
     "gulp-jshint": "^2.0.0",
-    "gulp-juice": "^0.1.0",
-    "gulp-juice-2": "^0.1.0",
     "gulp-juice-concat-enhanced": "^1.2.2",
     "gulp-less": "^3.0.3",
     "gulp-plumber": "^1.0.1",
     "gulp-rename": "^1.2.2",
-    "gulp-rev": "^7.0.0",
     "gulp-sass": "^2.0.1",
     "gulp-sourcemaps": "^1.5.2",
     "handlebars": "^4.0.5",
     "handlebars-helpers": "^0.7.3",
     "imagemin-pngcrush": "^5.0.0",
-    "jshint": "^2.9.1",
-    "jshint-stylish": "^2.0.1",
     "lazypipe": "^1.0.1",
     "lodash": "^4.14.2",
-    "merge-stream": "^1.0.0",
     "minimist": "^1.1.3",
     "run-sequence": "^1.1.2",
     "sanitize.css": "^4.1.0",
