--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-changed": "^1.3.0",
     "gulp-concat": "^2.6.0",
     "gulp-cssnano": "^2.1.0",
+    "gulp-debug": "^2.1.2",
     "gulp-extname": "^0.2.2",
     "gulp-flatten": "0.3.1",
     "gulp-htmlmin": "^2.0.0",
@@ -42,6 +43,7 @@
     "gulp-less": "^3.0.3",
     "gulp-plumber": "^1.0.1",
     "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
     "gulp-sass": "^2.0.1",
     "gulp-sourcemaps": "^1.5.2",
     "handlebars": "^4.0.5",
