--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "gulp-plumber": "^1.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
+    "gulp-s3-upload": "^1.6.1",
     "gulp-sass": "^2.0.1",
     "gulp-sourcemaps": "^1.5.2",
     "handlebars": "^4.0.5",
