--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "handlebars": "^4.0.5",
     "handlebars-helpers": "^0.7.3",
     "imagemin-pngcrush": "^5.0.0",
+    "js-yaml": "^3.6.1",
     "lazypipe": "^1.0.1",
     "lodash": "^4.14.2",
     "minimist": "^1.1.3",
