--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "normalize-css": "^4.2.0"
+    "normalize-css": "^4.2.0",
+    "jquery": "^3.1.0"
   },
   "overrides": {}
 }
