--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "npm": ">=2.15.8"
   },
   "devDependencies": {
-    "@thasmo/gulp-juice": "thasmo/gulp.juice",
     "assemble": "^0.17.1",
     "asset-builder": "^1.1.0",
     "browser-sync": "^2.14.0",
@@ -29,18 +28,14 @@
     "gulp-autoprefixer": "^3.1.0",
     "gulp-cached": "^1.1.0",
     "gulp-changed": "^1.3.0",
-    "gulp-concat": "^2.6.0",
     "gulp-cssnano": "^2.1.0",
     "gulp-debug": "^2.1.2",
     "gulp-extname": "^0.2.2",
-    "gulp-flatten": "0.3.1",
     "gulp-htmlmin": "^2.0.0",
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^3.0.2",
-    "gulp-jshint": "^2.0.0",
-    "gulp-juice": "^0.1.0",
     "gulp-juice-concat-enhanced": "^1.2.2",
-    "gulp-less": "^3.0.3",
+    "gulp-minify-html": "^1.0.6",
     "gulp-plumber": "^1.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
@@ -52,11 +47,9 @@
     "handlebars-helpers": "^0.7.3",
     "imagemin-pngcrush": "^5.0.0",
     "js-yaml": "^3.6.1",
-    "lazypipe": "^1.0.1",
     "lodash": "^4.14.2",
     "minimist": "^1.1.3",
     "run-sequence": "^1.1.2",
-    "sanitize.css": "^4.1.0",
     "traverse": "^0.6.6",
     "web-resource-inliner": "^2.0.0",
     "wiredep": "^4.0.0"
