--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "npm": ">=2.15.8"
   },
   "devDependencies": {
-    "assemble": "^0.17.1",
+    "assemble": "^0.23.0",
     "asset-builder": "^1.1.0",
     "browser-sync": "^2.14.0",
     "bs-html-injector": "^3.0.2",
@@ -26,7 +26,8 @@
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-cached": "^1.1.0",
-    "gulp-changed": "^1.3.0",
+    "gulp-changed": "^2.0.0",
+    "gulp-combine-mq": "^0.4.0",
     "gulp-cssnano": "^2.1.0",
     "gulp-debug": "^3.0.0",
     "gulp-extname": "^0.2.2",
@@ -40,18 +41,22 @@
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-s3-upload": "^1.6.1",
-    "gulp-sass": "^2.0.1",
-    "gulp-sourcemaps": "^1.5.2",
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.2.0",
     "gulp-to-json": "^1.0.1",
     "handlebars": "^4.0.5",
-    "handlebars-helpers": "^0.7.3",
+    "handlebars-helpers": "^0.8.0",
     "imagemin-pngcrush": "^5.0.0",
     "js-yaml": "^3.6.1",
     "lodash": "^4.14.2",
+    "map-stream": "0.0.7",
     "minimist": "^1.1.3",
     "run-sequence": "^1.1.2",
     "traverse": "^0.6.6",
     "web-resource-inliner": "^4.0.0",
     "wiredep": "^4.0.0"
+  },
+  "dependencies": {
+    "handlebars.element": "^0.3.4"
   }
 }
